--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "node src/index.js",
+    "heroku-postbuild": "cd frontend && npm install --only=dev && npm install && npm run build",
     "server": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
